--- a/appMovilShowPass/app/src/main/res/values/strings.xml
+++ b/appMovilShowPass/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">AppMovilShowpass</string>
+    <string name="app_name">Showpass</string>
     <string name="api_base_url">http://192.168.0.180:8080/</string>
 </resources>
